partially fixed regs landing: still weird gap b/w img and jmbtron

--- a/css/style.css
+++ b/css/style.css
@@ -647,10 +647,9 @@ p{
 
 .banner-image {
   width: 100%;
-  height: 60vh;
-  background-size: cover;
-  background-position: center;
+  height: 55vh;
 }
+
 .submit-btn {
   background-color: var(--dark-navy);
   color: white;
